fix misaligned form on mobile once and for all

--- a/css/main.css
+++ b/css/main.css
@@ -124,13 +124,14 @@ body {
 }
 
 #mce-EMAIL {
-    border: 3.25px solid #000;
+    border: 4px solid #000;
     border-radius: 0;
     height: 40px;
     display: inline-block;
     letter-spacing: 1px;
     line-height: 40px;
     margin-right: -5px;
+    padding: 0;
     width: 70%;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -143,9 +144,8 @@ body {
     color: #fff;
     display: inline-block;
     font-weight: bold;
-    height: 40.25px;
+    height: 40px;
     letter-spacing: 1px;
-    margin-top: 1.25px;
     padding: 5px 0;
     width: 20%;
     box-sizing: border-box;
